package org.learningu.scheduling.graph;

/*
 * A property of a room at an LU program.
 */
message SerialResource {
	required int32 resourceId = 1;
	optional string description = 2;
	optional int32 floatingCount = 4 [default = 0]; // number of floating resources of this type in addition to any built into rooms
	optional bool isBinding = 3 [default = false]; // if present, classes must require this property to get this room
}

message SerialSubject {
	required int32 subjectId = 1;
	optional string title = 2;
}

/*
 * A course in an LU program.  Courses may have estimated and maximum class sizes,
 * room requirements, and teachers.
 */
message SerialSection {
	required int32 sectionId = 1;
	required int32 courseId = 10;
	optional string courseTitle = 2 [default = "Untitled Class"];
	optional int32 subjectId = 12 [default = -1];
	repeated int32 teacherId = 3 [packed = true];
	optional int32 estimatedClassSize = 5 [default = 15];
	optional int32 maxClassSize = 6 [default = 20];
	optional int32 periodLength = 8 [default = 1];
	repeated int32 requiredResource = 9 [packed = true];
	repeated int32 prereqCourseId = 11 [packed = true];
	optional int32 minGrade = 13 [default = 9];
	optional int32 maxGrade = 14 [default = 12];
	optional int32 preferredRoom = 15 [default = -1];
}

/*
 * A teacher at an LU program.  Teachers may not be available for all time blocks.
 */
message SerialTeacher {
	required int32 teacherId = 1; // teacher identifier number
	optional string name = 2 [default = "Joe Teacher"]; // teacher name
	repeated int32 availablePeriod = 3 [packed = true]; // teacher availability
	repeated int32 groupId = 4 [packed = true]; // groups to cap
}

message SerialDateTime {
	required int32 year = 1;
	required int32 month = 2;
	required int32 day = 3;
	required int32 hour = 4;
	required int32 minute = 5;
}

message SerialTeacherGroup {
  required int32 groupId = 1;
  optional string name = 3 [default = "Teacher Group"];
  required int32 cap = 2;
}

/*
 * A single period at an LU program; the shortest possible length of a class.
 */
message SerialPeriod {
	required int32 periodId = 1;
	optional string shortDescription = 5;
	optional string description = 2;
	optional SerialDateTime start = 3;
	optional SerialDateTime end = 4;
	optional int32 minGrade = 7 [default = 6];
	optional int32 maxGrade = 8 [default = 12];
	optional double attendanceLevel = 6 [default = 1.0];
	optional bool isLunch = 9 [default = false];
	optional int32 lunchGroup = 10; // teachers can only be scheduled during one lunchGroup, so they can get lunch
}

/*
 * A block of consecutive periods at an LU program.  Classes may not be scheduled across time blocks.
 * For example, "before lunch" and "after lunch" might be distinct blocks.
 */
message SerialTimeBlock {
	// TODO: multi-block class support; multi-day program support
	required int32 blockId = 1;
	optional string description = 2;
	repeated SerialPeriod period = 4;
}

/*
 * A room at an LU program with possibly some associated resources.
 */
message SerialRoom {
	required int32 roomId = 1;
	optional string name = 3;
	optional int32 capacity = 4 [default = 25];
	repeated int32 availablePeriod = 5 [packed = true];
	repeated int32 resource = 6 [packed = true];
}

message SerialBuilding {
	required int32 buildingId = 1;
	optional string name = 2;
	repeated SerialRoom room = 3;
}

/*
 * A specification for an entire LU program, from which a schedule must be constructed.
 */
message SerialProgram {
	optional string name = 5 [default = ""];
	repeated SerialSubject subject = 7;
	repeated SerialTimeBlock timeBlock = 1;
	repeated SerialTeacher teacher = 2;
	repeated SerialSection section = 3;
	repeated SerialBuilding building = 8;
	repeated SerialResource resource = 6;
	repeated SerialTeacherGroup teacherGroup = 9;
}