package org.learningu.scheduling.schedule;

message SerialStartAssignment {
	required int32 periodId = 1;
	required int32 roomId = 2;
	required int32 sectionId = 3;
}

message SerialSchedule {
	repeated SerialStartAssignment assignment = 1;
}